--- a/src/components/Notes/Note.module.css
+++ b/src/components/Notes/Note.module.css
@@ -17,3 +17,14 @@
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+.note button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #f5ba13;
+  border: none;
+  width: 60px;
+  height: 36px;
+  cursor: pointer;
+  outline: none;
+}
